--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -52,7 +52,7 @@ personas:
   # 例: ["listener", "safety"] - 毎回必ず含める人格
   always_include: []
 
-# 固定設定 (通常は変更不要)
+# システム設定 (必要に応じて変更してください)
 system:
-  # プロンプトファイルのパス (従来の固定プロンプト用、人格システム有効時は無視)
+  # プロンプトテンプレートファイルのパス (人格システムでプレースホルダー置換用テンプレートとして使用)
   prompt_file: "prompt.md"
